[package]
name = "pretty-pnpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.11", features = ["derive"] }
itertools = "0.10.3"
num-format = "0.4.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
